[package]
name = "github-org-repo-migrator"
description = "A command-line tool to copy repositories from one GitHub organization to another"
repository = "https://github.com/hoverture/github-org-repo-migrator"
readme = "README.md"
license-file = "LICENSE.txt"
authors = ["Aingaran Elango <aingaran.elango@hoverture.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11", features = ["json"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0" }
tokio = { version = "^1", features = ["full"] }
git2 = { version = "^0.13" }
clap = { version = "^3.0" }
tempfile = { version = "^3.2" }
thiserror = { version = "^1.0" }


[profile.release]
# strip = true      # Automatically strip symbols from the binary.
# opt-level = "z"   # Optimize for size.
strip = "debuginfo" # Strip only debug information.
opt-level = 3       # Optimize for performance.
lto = true          # enable LLVM's Link Time Optimisations.
codegen-units = 1   # Decreses compile time, but improves optimisations.
